# serializer version: 1
# name: test_classical_profile_golden_snapshot
  dict({
    'ascii': 'Hello, world!',
    'dagger-alef-preserved': 'هٰذا',
    'empty': '',
    'invisibles': 'اب',
    'lam-alef-in-vocalized': 'بَلأرِ',
    'lookalikes': 'كيه',
    'quranic-annotation-preserved': 'رٰۜ حّۚ',
    'shadda-fatha-preserved': 'دَّر',
    'tanween-preserved': 'كتابًا',
    'tatweel': 'محمد',
    'vocalized-msa': 'كَتَبَ',
  })
# ---
# name: test_light_profile_golden_snapshot
  dict({
    'ascii': 'Hello, world!',
    'canonicalized-marks': 'بَّ',
    'decomposed-hamza': 'أحمد',
    'empty': '',
    'invisibles': 'اب',
    'lam-alef-hamza': 'لأ',
    'lam-alef-plain': 'لا',
    'line-breaks': '''
      a
      b
    ''',
    'lookalikes': 'كيه',
    'maqsura-residual': 'علي',
    'presentation-letters': 'به',
    'tatweel': 'مح',
    'vocalized': 'نصّ',
    'whitespace': 'a b',
  })
# ---
# name: test_ml_profile_golden_snapshot
  dict({
    'alef-variants-preserved': 'أ إ آ ٱ',
    'arabizi-untouched': '3arab',
    'ascii': 'Hello, world!',
    'dagger-alef': 'هذا',
    'digits-preserved': '١٢٣',
    'elongation': 'جميل',
    'empty': '',
    'hamza-preserved': 'مؤمن',
    'lam-alef-kept-variant': 'لأ',
    'maqsura-preserved': 'على',
    'punctuation-preserved': 'نعم، لا؟',
    'tatweel': 'محمد',
    'teh-marbuta-preserved': 'مدرسة',
    'vocalized-msa': 'كتب',
  })
# ---
# name: test_search_profile_golden_snapshot
  dict({
    'alef-variants': 'ا ا ا ا',
    'arabizi-untouched': '3arab',
    'ascii': 'Hello, world!',
    'dagger-alef': 'هذا',
    'digits': '123 456',
    'elongation': 'جميل',
    'empty': '',
    'hamza-carriers': 'مومن سيل ء',
    'lam-alef-then-folded': 'لا',
    'maqsura': 'علي',
    'number-separator-preserved': '123،456',
    'punctuation': 'نعم, لا?',
    'tatweel': 'محمد',
    'teh-marbuta': 'مدرسه',
    'vocalized-msa': 'كتب',
  })
# ---
